--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,10 +1,10 @@
-.TH UGREP "1" "March 02, 2020" "ugrep 1.8.0" "User Commands"
+.TH UGREP "1" "March 20, 2020" "ugrep 1.8.1" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
 .B ugrep
 [\fIOPTIONS\fR] [\fB-A\fR \fINUM\fR] [\fB-B\fR \fINUM\fR] [\fB-C\fR[\fINUM\fR]] [\fIPATTERN\fR] [\fB-e\fR \fIPATTERN\fR]
-      [\fB-N\fR \fIPATTERN\fR] [\fB-f\fR \fIFILE\fR] [\fB-t\fR \fITYPES\fR] [\fB-Q\fR \fIENCODING\fR] [\fB-J\fR [\fINUM\fR]]
+      [\fB-N\fR \fIPATTERN\fR] [\fB-f\fR \fIFILE\fR] [\fB-t\fR \fITYPES\fR] [\fB-J\fR [\fINUM\fR]] [\fB--sort\fR[=\fIKEY\fR]]
       [\fB--color\fR[=\fIWHEN\fR]|\fB--colour\fR[=\fIWHEN\fR]] [\fB--pager\fR[=\fICOMMAND\fR]] [\fIFILE\fR \fI...\fR]
 .SH DESCRIPTION
 The \fBugrep\fR utility searches any given input files, selecting lines that
@@ -15,10 +15,10 @@ An empty pattern matches every line.  Each input line that matches at least one
 of the patterns is written to the standard output.
 .PP
 The \fBugrep\fR utility accepts input of various encoding formats and
-normalizes the input to UTF-8.  When a UTF byte order mark is present in the
+normalizes the output to UTF-8.  When a UTF byte order mark is present in the
 input, the input is automatically normalized; otherwise, \fBugrep\fR assumes
 the input is ASCII, UTF-8, or raw binary.  An input encoding format may be
-specified with option \fB-Q\fR, \fB--encoding\fR.
+specified with option \fB--encoding\fR.
 .PP
 The following options are available:
 .TP
@@ -106,14 +106,19 @@ they were ordinary files.
 .TP
 \fB\-d\fR \fIACTION\fR, \fB\-\-directories\fR=\fIACTION\fR
 If an input file is a directory, use ACTION to process it.  By
-default, ACTION is `read', i.e., read directories just as if they
-were ordinary files.  If ACTION is `skip', silently skip
-directories.  If ACTION is `recurse', read all files under each
-directory, recursively, following symbolic links only if they are
-on the command line.  This is equivalent to the \fB\-r\fR option.  If
-ACTION is `dereference\-recurse', read all files under each
-directory, recursively, following symbolic links.  This is
+default, ACTION is `skip', i.e., silently skip directories unless
+specified on the command line.  If ACTION is `read', warn when
+directories are read as input.  If ACTION is `recurse', read all
+files under each directory, recursively, following symbolic links
+only if they are on the command line.  This is equivalent to the \fB\-r\fR
+option.  If ACTION is `dereference\-recurse', read all files under
+each directory, recursively, following symbolic links.  This is
 equivalent to the \fB\-R\fR option.
+.TP
+\fB\-\-depth\fR=\fINUM\fR, \fB\-1\fR, \fB\-2\fR, \fB\-3\fR, \fB\-4\fR, \fB\-5\fR, \fB\-6\fR, \fB\-7\fR, \fB\-8\fR, \fB\-9\fR
+Restrict recursive searches to NUM (NUM > 0) directory levels deep,
+where \fB\-1\fR (\fB\-\-depth\fR=1) searches the specified path without recursing
+into subdirectories.  Enables \fB\-R\fR if \fB\-R\fR or \fB\-r\fR is not specified.
 .TP
 \fB\-E\fR, \fB\-\-extended\-regexp\fR
 Interpret patterns as extended regular expressions (EREs). This is
@@ -163,9 +168,9 @@ If PATTERN or \fB\-e\fR \fIPATTERN\fR is also specified, then this option does
 not apply to \fB\-f\fR \fIFILE\fR patterns.
 .TP
 \fB\-f\fR \fIFILE\fR, \fB\-\-file\fR=\fIFILE\fR
-Read newline\-separated patterns from FILE.  Empty patterns and
-patterns starting with `###' are ignored.  If FILE does not exist,
-the GREP_PATH environment variable is used as the path to FILE.
+Read newline\-separated patterns from FILE.  White space in patterns
+is significant.  Empty lines in FILE are ignored.  If FILE does not
+exist, the GREP_PATH environment variable is used as path to FILE.
 If that fails, looks for FILE in /usr/local/share/ugrep/patterns.
 When FILE is a `\fB\-'\fR, standard input is read.  Empty files contain no
 patterns; thus nothing is matched.  This option may be repeated.
@@ -331,16 +336,10 @@ Stop reading the input after NUM matches in each input file.
 \fB\-\-match\fR
 Match all input.  Same as specifying an empty pattern to search.
 .TP
-\fB\-\-max\-depth\fR=\fINUM\fR
-Restrict recursive search to NUM (NUM > 0) directories deep, where
-\fB\-\-max\-depth\fR=1 searches the specified path without visiting
-sub\-directories.  By comparison, \fB\-d\fRskip skips all directories even
-when they are on the command line.
-.TP
 \fB\-\-max\-files\fR=\fINUM\fR
-If \fB\-R\fR or \fB\-r\fR is specified, restrict the number of files matched to
-NUM.  Specify \fB\-J\fR1 to produce replicable results by ensuring that
-files are searched in the same order as specified.
+Restrict the number of files matched to NUM.  Note that \fB\-\-sort\fR or
+\fB\-J\fR1 may be specified to produce replicable results.  If \fB\-\-sort\fR is
+specified, the number of threads spawned is limited to NUM.
 .TP
 \fB\-N\fR \fIPATTERN\fR, \fB\-\-neg\-regexp\fR=\fIPATTERN\fR
 Specify a negative PATTERN used during the search of the input:
@@ -447,6 +446,17 @@ Use SEP as field separator between file name, line number, column
 number, byte offset, and the matched line.  The default is a colon
 (`:').
 .TP
+\fB\-\-sort[\fR=\fIKEY\fR]
+Displays matching files in the order specified by KEY in recursive
+searches.  KEY can be `name' to sort by pathname (default), `size'
+to sort by file size, `used' to sort by last access time, `changed'
+to sort by last modification time, and `created' to sort by
+creation time.  Sorting is reversed by `rname', `rsize', `rused',
+`rchanged', or `rcreated'.  Archive contents are not sorted.
+Subdirectories are displayed after matching files.  FILE arguments
+are searched in the same order as specified.  Normally ugrep
+displays matches in no particular order to improve performance.
+.TP
 \fB\-\-stats\fR
 Display statistics on the number of files and directories searched,
 and the inclusion and exclusion constraints applied.
@@ -527,7 +537,7 @@ additional values are output.  See also options \fB\-\-format\fR and \fB\-u\fR.
 \fB\-Y\fR, \fB\-\-empty\fR
 Permits empty matches.  By default, empty matches are disabled,
 unless a pattern begins with `^' and ends with `$'.  Note that \fB\-Y\fR
-when specified with an empty\-matching pattern such as x? and x*,
+when specified with an empty\-matching pattern, such as x? and x*,
 match all input, not only lines with a `x'.
 .TP
 \fB\-y\fR, \fB\-\-any\-line\fR
@@ -535,7 +545,7 @@ Any matching or non\-matching line is output.  Non\-matching lines
 are output with the `\fB\-'\fR separator as context of the matching lines.
 See also options \fB\-A\fR, \fB\-B\fR, and \fB\-C\fR.  Disables multi\-line matching.
 .TP
-\fB\-Z\fR, \fB\-\-null\fR
+\fB\-Z\fR, \fB\-\-null\fR, \fB\-0\fR
 Prints a zero\-byte after the file name.
 .TP
 \fB\-z\fR, \fB\-\-decompress\fR
@@ -551,8 +561,8 @@ bzip2 (requires suffix .bz, .bz2, .bzip2, .tbz, .tbz2, .tb2, .tz2),
 lzma and xz (requires suffix .lzma, .tlz, .xz, .txz).
 .PP
 If no \fIFILE\fR arguments are specified and input is read from a terminal,
-recursive searches are performed as if \fB-R\fR is specified.  To force input
-from a terminal, specify `-' as the \fIFILE\fR argument.
+recursive searches are performed as if \fB-R\fR is specified.  To force reading
+from standard input, specify `-' as the \fIFILE\fR argument.
 .PP
 A `--' signals the end of options; the rest of the parameters are \fIFILE\fR
 arguments, allowing filenames to begin with a `-' character.
@@ -917,11 +927,11 @@ $ ugrep -Rl '' --ignore-files
 List all files containing a RPM signature, located in the `rpm' directory and
 recursively below up to two levels deeper:
 .IP
-$ ugrep -R --max-depth=3 -l -tRpm '' rpm/
+$ ugrep -3 -l -tRpm '' rpm/
 .PP
 Display all words in a MacRoman-encoded file that has CR newlines:
 .IP
-$ ugrep -QMACROMAN '\\w+' mac.txt
+$ ugrep --encoding=MACROMAN '\\w+' mac.txt
 .SH BUGS
 Report bugs at:
 .IP
